[project]
name = "PS5_DIFUM_VISU"
version = "0.1.4"
dependencies = [
    "numpy~=1.26.0",
    "pandas~=2.1.1",
    "plotly~=5.9.0",
    "scikit-learn~=1.3.0",
    "pillow~=9.4.0",
    "transformers~=4.36.2",
    "torch",
    "abc"
]
authors = [
  { name="Biolley Valentin", email="valentin.biolley@edu.hefr.ch" },
]

description = "Module visualisation of embeddings"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.forge.hefr.ch/valentin.biolley/ps5_difum_module_visu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"